--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>桐成可【点击进入】继续访问一个人在家</title>
     
     <!-- 抖音预览卡片标签 -->
-    <meta property="og:image" content="https://tiklokgomkok.github.io/333.png">
-    <meta property="og:url" content="https://tiklokgomkok.github.io">
+    <meta property="og:image" content="https://5w1z91.github.io.png">
+    <meta property="og:url" content="https://5w1z91.github.io">
     
     <style>
         body {
